Adicionar quebra de palavras na página de user

--- a/public/styles/styleGenerico.css
+++ b/public/styles/styleGenerico.css
@@ -36,6 +36,7 @@ html, body{
 }
 .postResult p{
   font-size: calc(0.5vmax + 10px);
+  word-break: break-all;
 }
 .postResult a{
   font-style: italic;
