--- a/public/styles/appStyle.css
+++ b/public/styles/appStyle.css
@@ -172,6 +172,7 @@ body{
     z-index: 998;
     width: 40vw;
     height: fit-content;
+    min-height: 60vh;
     border-radius: 3vmax;
     padding: 2% 5% 0% 5%;
     padding-left: 2%;
